Chedrick - Fixed Overflow in x axis

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -2174,3 +2174,7 @@ html {
     line-height: 41px;
   }
 }
+
+html,body{
+  overflow-x: hidden;
+}
